<resources>
    <string name="app_name">Imoond shop</string>
    <string name="lorem">Automatically download attachments Automatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsfor incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emailsAutomatically download attachments for incoming emails</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="account">Account</string>
    <string name="add_to_card">add to card</string>
    <string name="checkout">Checkout</string>
    <string name="log_out">Log Out</string>
    <string name="category">Category</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="top_products">Top-products</string>
    <string name="so_m">so`m</string>
    <string name="more_to_love">More to love</string>
    <string name="all">All</string>
    <string name="buy_now">Buy Now</string>
    <string name="dimensions_properties">Dimensions properties</string>
    <string name="weight">weight</string>
    <string name="length">length</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="babies_toys">Babies toys</string>
    <string name="notification">Notification</string>
    <string name="hi">Hi</string>
    <string name="sold">sold</string>
    <string name="not_notifications">not notifications</string>
    <string name="try_again">Try again</string>
    <string name="product_image">product image</string>
</resources>